# tt-splat-viewer

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md
.github/workflows/: pages.yml
src/: axes.wgsl  blit.wgsl  gs.wgsl  lib.rs  main.rs  offscreen.rs  scene.rs  shader.wgsl
validation/: export_ply.py  oracle.py  psnr.py  sh_check.py  verify_routeb.py
web/: index.html  sample.ply  tt_splat_viewer.js  tt_splat_viewer_bg.wasm
