[package]
name = "tt-splat-viewer"
version = "0.1.0"
edition = "2021"
description = "Rust + wgpu viewer for the tt-splat poly-splat + WSR Gaussian-splatting model"
license = "MIT"
repository = "https://github.com/kinginu/tt-splat-viewer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "0.20"
winit = "0.29"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
cfg-if = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
# WebGPU backend (not webgl): the WSR accumulator is Rgba16Float with additive blending, which
# WebGL2 can't reliably render+blend. Needs a WebGPU browser (Chrome/Edge, or Safari 17.4+).
wgpu = "0.20"

[profile.release]
opt-level = 3
